# visitNotes

./: .gitignore  README.md  app.py  flake.nix  ner.py  pyproject.toml  requirements.txt  run.py  speech_recognizer.py  summarize.py  transcription.py  visitNotes.py
data/selected_transcripts/: RES0001.txt
examples/: visitNotes.py
notes-site/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  site-dist.nix  tailwind.config.js  vite.config.js
notes-site/src/: App.css  App.jsx  SendAudio.jsx  index.css  socket.js
src/: app.py  socket_server.py  speech_recognizer.py  summarize.py
tests/: transcription_test.py
vm/: config.nix  local.nix  selfsigned.crt  selfsigned.key  site-service.nix
